# client-chat

./: .gitignore  Cargo.toml
common/: Cargo.toml
common/src/: db.rs  lib.rs
db-server/: Cargo.toml
db-server/src/: db.rs  main.rs  models.rs  routes.rs
frontend/: Cargo.toml  Trunk.toml
frontend/src/: main.rs
