[package]
name = "db-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.1"
dotenv = "0.15.0"
mongodb = "2.8.0"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
